--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   right: 0;
-  width: 100%
+  width: 100%;
 
   z-index: 99;
 
